--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,22 @@
+* {
+  margin: 10px
+}
+
+.post {
+  border: 2px solid black;
+  margin: 20px
+}
+
+.postText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
